# LittleEditor

./: Cargo.toml  README.md
data/: db.json
examples/: pet.rs  tui.rs
src/: main.rs
